Update backend logic and dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+.env
 
 # Firebase service account keys (NEVER commit these)
 *firebase*adminsdk*.json
